# quill

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  babel.cfg  codex-handoff.md  codex-review-log.md  dialogs.md  golden.html  golden.md  macos_app.py  main-branch-audit-note-2026-06-10.md  msg.txt  publishing-main-merge-readiness-note-2026-06-10.md  publishing-remote-integration-planning-2026-06-10.md  pyproject.toml  rel.html  rel.md  requirements.txt  setup_macos.py  x.md  x2.md  x3.md  zfix4.html  zfix4.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  quillin_submission.yml
.github/PULL_REQUEST_TEMPLATE/: quillin_submission.md
.github/instructions/: accessible-dialogs.instructions.md
.github/workflows/: copilot-setup-steps.yml  docs-artifacts.yml  github-pages.yml  pr-ci.yml  quillin-verify.yml  security-ci.yml  windows-release.yml
.tmp/pytest-all-minus-update-manager/: test_a_dead_holder_never_blockcurrent  test_a_live_instance_blocks_a_current  test_add_notification_persistscurrent  test_add_persists_across_reloacurrent  test_add_promptcurrent  test_add_recent_file_honors_licurrent  test_add_recent_file_prepends_current  test_all_slots_returns_twelve_current  test_apply_download_failure_recurrent  test_apply_rolls_back_on_instacurrent  test_apply_successcurrent  test_assign_auto_is_allowedcurrent  test_assign_model_to_tiercurrent  test_assistant_api_key_is_protcurrent  test_assistant_api_key_preferscurrent  test_assistant_applies_instruccurrent  test_assistant_connection_settcurrent  test_assistant_no_preambles_lecurrent  test_assistant_onboarding_compcurrent  test_assistant_secret_unlock_fcurrent  test_autosave_document_createscurrent  test_autosave_keeps_most_recencurrent  test_backup_document_creates_scurrent  test_backup_document_disambigucurrent  test_begin_session_offers_prevcurrent  test_begin_session_skips_dismicurrent  test_bits_whisperer_master_flacurrent  test_build_dependency_notices_current  test_build_log_summary_empty_wcurrent  test_build_log_summary_redactscurrent  test_builtin_cannot_be_removedcurrent  test_builtins_present_on_freshcurrent  test_change_profile_preview_recurrent  test_check_grammar_is_builtincurrent  test_claim_is_idempotent_then_current  test_classify_change_detects_dcurrent  test_classify_change_detects_mcurrent  test_classify_change_none_whencurrent  test_clear_all_empties_every_scurrent  test_clear_assistant_api_key_ccurrent  (+244 more)
.tmp/pytest-publishing-broader/: test_bits_whisperer_master_flacurrent  test_build_epub_navigator_nodecurrent  test_build_misspelling_navigatcurrent  test_build_outline_navigator_ncurrent  test_change_profile_preview_recurrent  test_checklistbox_is_flaggedcurrent  (+140 more)
.tmp/pytest-publishing-broader-rerun/: test_bits_whisperer_master_flacurrent  test_build_epub_navigator_nodecurrent  test_build_misspelling_navigatcurrent  test_build_outline_navigator_ncurrent  test_change_profile_preview_recurrent  test_checklistbox_is_flaggedcurrent  test_checklistbox_ok_comment_ecurrent  test_clear_recovery_logs_emptycurrent  test_clear_recovery_logs_ignorcurrent  test_clear_recovery_logs_missicurrent  test_clear_recovery_logs_removcurrent  test_close_current_document_recurrent  test_command_run_commits_pendicurrent  test_command_run_does_not_commcurrent  test_compare_group_builder_clacurrent  test_compare_group_builder_igncurrent  test_confirm_discard_changes_acurrent  test_ctrl_shift_o_opens_outlincurrent  test_dead_region_attrs_correctcurrent  test_dead_region_attrs_enter_icurrent  test_dead_region_attrs_exit_iscurrent  test_default_port_returns_convcurrent  test_delete_password_is_idempocurrent  test_delete_site_drops_matchincurrent  test_describe_feature_toggle_hcurrent  test_dialog_align_right_is_flacurrent  test_dialog_expand_button_sizecurrent  test_enabled_feature_with_all_current  test_enter_continues_markdown_current  test_enter_on_empty_list_item_current  test_every_feature_id_referenccurrent  test_expand_selection_grows_ancurrent  test_extend_selection_commits_current  test_extend_selection_mode_movcurrent  test_extract_list_manager_statcurrent  test_feature_coverage_maps_newcurrent  test_feature_dependency_enforccurrent  test_feature_health_report_inccurrent  test_feature_manager_can_switccurrent  test_feature_manager_finds_feacurrent  (+106 more)
codex-memory/: publishing-providers-framework-readiness.md
codex-notes/: README.md
codex-plans/: publishing-providers-framework.md
docs/: ACCESSIBLEAPPS_INTEGRATION.epub  ACCESSIBLEAPPS_INTEGRATION.html  ACCESSIBLEAPPS_INTEGRATION.md  CONTROL_REFERENCE.epub  CONTROL_REFERENCE.html  CONTROL_REFERENCE.md  QUILL Developer Console and Automation.epub  QUILL Developer Console and Automation.html  QUILL Developer Console and Automation.md  QUILL-PRD.epub  QUILL-PRD.html  QUILL-PRD.md  TRANSLATION_STYLE_GUIDE.epub  TRANSLATION_STYLE_GUIDE.html  TRANSLATION_STYLE_GUIDE.md  announcement-beta.md  announcement.epub  announcement.html  announcement.md  braille.epub  braille.html  braille.md  copy_tray_notes.epub  copy_tray_notes.html  copy_tray_notes.md  deployment.epub  deployment.html  deployment.md  hub-community-guide.md  leasey.md  planning.epub  planning.html  planning.md  qdc-tutorial.epub  qdc-tutorial.html  qdc-tutorial.md  quillin-code-of-conduct.epub  quillin-code-of-conduct.html  quillin-code-of-conduct.md  quillin-conversion-roadmap.epub  (+34 more)
docs/site/: docs.html  (+3 more)
installer/: quill.iss
quill/: __init__.py  __main__.py
quillin-hub/: requirements.txt  run.py
scripts/: _autodeps.py  build_braille_pack.py  build_macos.sh  build_sound_packs.py  build_update_zip.py  build_windows_distribution.py  fetch_bootstrappers.py  gen_indent_tones.py  gen_ink_sounds.py  generate_app_updater_feed.py  generate_file_manifest.py  generate_release_artifacts.py  local_ai_editing_proof.py  macos_entitlements.plist  release_readiness.py  setup_macos.py
tests/: conftest.py  e2e_gemini.py  e2e_providers.py
tools/: profile_startup.py
(+823 files in other folders)
