[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "quill"
version = "0.1.5"
description = "Screen-reader-first writing and document environment for Windows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Blind Information Technology Solutions (BITS)" },
  { name = "Community Access" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
]
dependencies = ["regex>=2024.0.0"]

[project.optional-dependencies]
ui = [
    "wxPython>=4.2.2",
    # Accessible wx.html2.WebView surfaces (chat, preview, dialogs) — extracted
    # from Quill and published so any wxPython app can reuse it.
    "wx-accessible-webview>=0.2.0",
    "pyttsx3>=2.99",
    # CA bundle for verified HTTPS update checks (macOS Python lacks trusted roots).
    "certifi>=2024.2.2",
    # Prism screen-reader speech bridge (Windows) — routes announcements to
    # NVDA/JAWS/Narrator instead of speaking over them.
    "prismatoid>=0.16.5; sys_platform == 'win32'",
]
spellcheck = ["pyenchant>=3.2"]
# Offline VibeVoice speech-FILE generator (AI > Speech > Download VibeVoice Model).
# Heavy + optional, so it's its own extra; the GUI degrades gracefully without it.
# Installed from a zip archive so no `git` is required on the target machine.
vibevoice = [
    "vibevoice-cpu[model] @ https://github.com/Community-Access/vibevoice-cpu/archive/refs/heads/main.zip",
]
# On-device AI for the Ask Quill chat. Windows/Linux use llama.cpp (CPU, GGUF);
# a GGUF model (e.g. Phi-4-mini Q4) goes in <app data>/models or QUILL_LLAMA_MODEL.
ai = ["llama-cpp-python>=0.3.23"]
dictation = ["SpeechRecognition>=3.10.0"]
pages = ["keynote-parser>=1.0", "markitdown[all]>=0.1.0"]
dev = [
  "pytest>=8.2",
  "pytest-xdist>=3.6",
  "pytest-timeout>=2.3",
  "ruff>=0.6",
  "mypy>=2.1.0",
]

[project.scripts]
quill = "quill.__main__:main"

[tool.hatch.metadata]
# Allow direct URL references in optional-dependencies (e.g. the `vibevoice`
# extra installs vibevoice-cpu from a GitHub archive). Quill is an app, not a
# PyPI-published library, so direct references are fine — and hatchling refuses
# to build metadata without this, which broke `pip install -e .` in CI.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["quill"]

[tool.hatch.build.targets.wheel.force-include]
"quill/data/words_alpha.txt" = "quill/data/words_alpha.txt"
"quill/data/words_alpha.LICENSE.txt" = "quill/data/words_alpha.LICENSE.txt"
"quill/data/th_en_US_v2.dat" = "quill/data/th_en_US_v2.dat"
"quill/data/th_en_US_LICENSE.txt" = "quill/data/th_en_US_LICENSE.txt"
"quill/data/th_en_US_WordNet_LICENSE.txt" = "quill/data/th_en_US_WordNet_LICENSE.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
timeout = 30
log_cli = true
log_level = "INFO"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_windows_distribution.py" = ["E501"]
"scripts/local_ai_editing_proof.py" = ["E501"]
"tests/unit/core/ai/test_foundation_models.py" = ["E402", "E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
exclude = ["quill/ui/"]
