[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "quill"
version = "0.5.0"
description = "Screen-reader-first writing and document environment for Windows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Blind Information Technology Solutions (BITS)" },
  { name = "Community Access" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]
dependencies = [
    "regex>=2026.5.9",
    "defusedxml>=0.7.1",
    # Runtime deps of the vendored autoupdate library (quill/_vendor/autoupdate).
    "requests>=2.31",
    "platform_utils>=1.6",
]

[project.optional-dependencies]
ui = [
    "wxPython>=4.2.5",
    # Accessible wx.html2.WebView surfaces (chat, preview, dialogs) — extracted
    # from Quill and published so any wxPython app can reuse it.
    "wx-accessible-webview>=0.2.0",
    "pyttsx3>=2.99",
    # CA bundle for verified HTTPS update checks (macOS Python lacks trusted roots).
    "certifi>=2024.2.2",
    # Prism screen-reader speech bridge (Windows) — routes announcements to
    # NVDA/JAWS/Narrator instead of speaking over them.
    "prismatoid>=0.16.5; sys_platform == 'win32'",
    # HTML-to-text converter for intelligent paste cleaning (AccessibleApps, MIT).
    "html_to_text>=0.1.0",
]
spellcheck = ["pyenchant>=3.3.0"]
# Edit files over SSH/SFTP (issue #139): browse a remote host, download to edit,
# upload on save with a tilde backup. paramiko handles password and OpenSSH-key
# auth; it is optional so the rest of Quill runs without it.
ssh = ["paramiko>=3.4"]
# On-device AI for the Ask Quill chat. Windows/Linux use llama.cpp (CPU, GGUF);
# a GGUF model (e.g. Phi-4-mini Q4) goes in <app data>/models or QUILL_LLAMA_MODEL.
ai = ["llama-cpp-python>=0.3.28"]
dictation = ["SpeechRecognition>=3.16.1"]
# Native Windows OCR (OCR-1): a thin pip wheel projecting the Windows.Media.Ocr
# WinRT APIs that ship inside Windows 10/11. The OCR engine itself is a built-in
# OS component, so end users install nothing extra — bundling this wheel makes
# the zero-install Windows backend available; Tesseract (OCR-2) stays a separate
# opt-in install for users who choose it.
ocr = ["winsdk>=1.0.0b10; sys_platform == 'win32'"]
pages = ["keynote-parser>=1.14.4.0", "markitdown[docx,pptx,xlsx,xls,pdf]>=0.1.6"]
# GLOW document accessibility engine (audit / fix / convert for docx, pptx,
# xlsx, pdf, epub, md). quill-glow-core is the thin, stable service contract
# Quill imports; its [glow] extra pulls in the acb-large-print backend. The
# dependency is named — never a drive path — so it resolves the same from any
# checkout root on any machine. Until these are published to an index, install
# the vendored, drive-independent pure-Python wheels with a repo-relative path:
#   pip install --find-links vendor/wheels "quill-glow-core[glow]"
glow = ["quill-glow-core[glow]>=0.1.1"]
# macOS build + runtime. py2app 0.28.x is incompatible with setuptools >= 83
# (the build aborts with "install_requires is no longer supported"), so pin it.
# pyobjc powers the macOS platform layer; apple-fm-sdk is the Foundation Models
# backend used by Ask Quill on macOS.
macos = [
    "py2app>=0.28.10",
    "setuptools<83",
    "pyobjc>=12.2; sys_platform == 'darwin'",
    "apple-fm-sdk>=0.2.0; sys_platform == 'darwin'",
]
github = [
    # GitHub repository browser and remote file open/save (File > Open Remote > GitHub).
    "PyGithub>=2.0",
]
dev = [
  "pytest>=9.0.3",
  "pytest-xdist>=3.6",
  "pytest-timeout>=2.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.17",
  "mypy>=2.1.0",
  # I18N: string extraction, .po update, .mo compile
  "Babel>=2.14",
]

[project.scripts]
quill = "quill.__main__:main"

[tool.hatch.metadata]
# Allow direct URL references in optional-dependencies. Quill is an app, not a
# PyPI-published library, so direct references are fine — and hatchling refuses
# to build metadata without this, which broke `pip install -e .` in CI.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["quill"]

[tool.hatch.build.targets.wheel.force-include]
"quill/data/words_alpha.txt" = "quill/data/words_alpha.txt"
"quill/data/words_alpha.LICENSE.txt" = "quill/data/words_alpha.LICENSE.txt"
"quill/data/th_en_US_v2.dat" = "quill/data/th_en_US_v2.dat"
"quill/data/th_en_US_LICENSE.txt" = "quill/data/th_en_US_LICENSE.txt"
"quill/data/th_en_US_WordNet_LICENSE.txt" = "quill/data/th_en_US_WordNet_LICENSE.txt"
"quill/core/schemas/extension.json" = "quill/core/schemas/extension.json"
"quill/quillins_bundled" = "quill/quillins_bundled"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
timeout = 30
log_cli = true
log_level = "INFO"
markers = [
    "perf: wall-clock performance budgets; run with RUN_PERF=1 or exclude with -m 'not perf'",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Vendored, generated, and distribution trees are not first-party source and
# must not be linted or format-checked.
extend-exclude = [
    "build",
    "windows-distribution",
    "installer-smoke",
    "installer-smoke-2",
    "release-dist-0.1-final",
    "release-dist-0.1-r2",
    "kokoro",
    "tmp",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_windows_distribution.py" = ["E501"]
"scripts/local_ai_editing_proof.py" = ["E501"]
"tests/unit/core/ai/test_foundation_models.py" = ["E402", "E501"]
# This test asserts the exact long Inno Setup script lines emitted by
# scripts/build_windows_distribution.py (which itself carries the same E501
# ignore); wrapping the literal installer directives would obscure the match.
"tests/unit/scripts/test_build_windows_distribution.py" = ["E501"]
# py2app requires patching finalize_options before importing the platform
# shell-integration module, so that import is deliberately late.
"scripts/setup_macos.py" = ["E402"]
# macOS-only platform tests import the module under test after a
# sys.platform skip guard, so the import is deliberately not at the top.
"tests/unit/platform/macos/test_high_contrast.py" = ["E402"]
"tests/unit/platform/macos/test_keychain.py" = ["E402"]
"tests/unit/platform/macos/test_sr_detect.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
exclude = ["quill/ui/"]

# Third-party modules without type stubs or a py.typed marker. Quill treats
# these as untyped at the import boundary so the scoped strict gate
# (mypy quill/core quill/io, see CONTRIBUTING) stays green without weakening
# typing in our own code.
[[tool.mypy.overrides]]
module = [
    "defusedxml.*",
    "regex",
    "enchant",
    "keynote_parser.*",
    "faster_whisper",
    "kokoro",
    "openpyxl",
    # Optional runtime dependencies that are not installed in the scoped-typing
    # CI job (which installs only .[dev]); the gate should measure our code, not
    # whether an optional extra happens to be present.
    "markitdown",
    "certifi",
    "pdfplumber",
    "pyttsx3",
    # Optional GLOW shared-core engine, pulled in only by the `glow` extra.
    # core/glow.py imports it behind a guarded try/except; the scoped strict
    # gate must not depend on the extra being installed.
    "quill_glow_core",
    "quill_glow_core.*",
    # Optional GitHub integration (quill[github]); imported lazily in github_provider.py.
    "github",
    "github.*",
]
ignore_missing_imports = true
